[gd_scene load_steps=13 format=3 uid="uid://08ckl4yo368g"]

[ext_resource type="Texture2D" uid="uid://2aqu7ltpxaow" path="res://assets/locations/07_Parla_Office/06_office.png" id="1_b6ly2"]
[ext_resource type="Script" path="res://scripts/07_Parla_Office/room_07_parla_office.gd" id="1_mg8hg"]
[ext_resource type="PackedScene" uid="uid://vn8ay56opuf" path="res://scenes/phone.tscn" id="2_ew44c"]
[ext_resource type="Texture2D" uid="uid://duyso7xfljeek" path="res://assets/locations/07_Parla_Office/06_office_blink2.png" id="2_pqajj"]
[ext_resource type="Texture2D" uid="uid://d4akqhah32h4o" path="res://assets/locations/07_Parla_Office/06_office_breath_01.png" id="5_e2njl"]
[ext_resource type="Texture2D" uid="uid://bx2hlh50ktrmt" path="res://assets/locations/07_Parla_Office/06_office_breath_02.png" id="6_r3kt1"]
[ext_resource type="Texture2D" uid="uid://bbdmrfnhrcjhg" path="res://assets/locations/07_Parla_Office/06_office_rasca.png" id="7_b4e4g"]
[ext_resource type="Script" path="res://scripts/07_Parla_Office/talk_with_miguel.gd" id="8_mam8n"]
[ext_resource type="Script" path="res://scripts/07_Parla_Office/07_parla_office_exit.gd" id="9_oi4sj"]

[sub_resource type="Animation" id="Animation_8f3qj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/06Office:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_b6ly2")]
}

[sub_resource type="Animation" id="Animation_ntowb"]
resource_name = "blink"
length = 15.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/06Office:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8, 2.2, 2.46667, 2.76667, 3.03333, 4.56667, 4.66667, 5.16667, 5.26667, 6.03333, 6.3, 6.6, 6.86667, 8.23333, 8.46667, 9.9, 10.1667, 10.4667, 10.7333, 11.9, 12, 12.8333, 13.3333, 13.7333, 14.1333, 15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_b6ly2"), ExtResource("2_pqajj"), ExtResource("1_b6ly2"), ExtResource("5_e2njl"), ExtResource("6_r3kt1"), ExtResource("5_e2njl"), ExtResource("1_b6ly2"), ExtResource("2_pqajj"), ExtResource("1_b6ly2"), ExtResource("2_pqajj"), ExtResource("1_b6ly2"), ExtResource("5_e2njl"), ExtResource("6_r3kt1"), ExtResource("5_e2njl"), ExtResource("1_b6ly2"), ExtResource("7_b4e4g"), ExtResource("1_b6ly2"), ExtResource("5_e2njl"), ExtResource("6_r3kt1"), ExtResource("5_e2njl"), ExtResource("1_b6ly2"), ExtResource("2_pqajj"), ExtResource("1_b6ly2"), ExtResource("5_e2njl"), ExtResource("6_r3kt1"), ExtResource("5_e2njl"), ExtResource("1_b6ly2"), ExtResource("1_b6ly2")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m8w10"]
_data = {
"RESET": SubResource("Animation_8f3qj"),
"blink": SubResource("Animation_ntowb")
}

[node name="07_Parla_office" type="Node2D"]
script = ExtResource("1_mg8hg")

[node name="Phone" parent="." instance=ExtResource("2_ew44c")]
z_index = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m8w10")
}

[node name="06Office" type="Sprite2D" parent="AnimationPlayer"]
position = Vector2(320, 180)
texture = ExtResource("1_b6ly2")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 134.0
offset_top = 41.0
offset_right = 322.0
offset_bottom = 302.0
script = ExtResource("8_mam8n")

[node name="Label" type="Label" parent="TextureButton"]
visible = false
z_index = 1
layout_mode = 0
offset_left = 141.0
offset_top = 28.0
offset_right = 302.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 13
text = "Talk with Miguel"

[node name="TextureButton2" type="TextureButton" parent="."]
offset_right = 94.0
offset_bottom = 360.0
script = ExtResource("9_oi4sj")

[node name="Label" type="Label" parent="TextureButton2"]
visible = false
z_index = 1
layout_mode = 0
offset_left = 15.0
offset_top = 334.0
offset_right = 143.0
offset_bottom = 348.0
theme_override_font_sizes/font_size = 12
text = "Go outside"

[connection signal="button_down" from="TextureButton" to="TextureButton" method="_on_button_down"]
[connection signal="mouse_entered" from="TextureButton" to="TextureButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="TextureButton" method="_on_mouse_exited"]
[connection signal="button_down" from="TextureButton2" to="TextureButton2" method="_on_button_down"]
[connection signal="mouse_entered" from="TextureButton2" to="TextureButton2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton2" to="TextureButton2" method="_on_mouse_exited"]
